--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div>
+    <p align="center"><img src="https://raw.githubusercontent.com/team-frontline/demo-mschain/master/public/mschain-logo-full.png" width="400"></p>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
